Add user client select option for masseur
Fixes #102 Fixes #108
